# pypkgpack

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
packages-to-test/: package2.py
packages-to-test/package1/: __init__.py  module.py
pybundle/: __init__.py  bundle.py  importer.py
pypkgpack/: __init__.py  bundle.py  importer.py
tests/: test_manual.py  test_pybundle.py
