[tool.poetry]
name = "pypkgpack"
version = "0.1.0"
description = ""
authors = ["thautwarm <twshere@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ast-compat = "^0.11.1"
wisepy2 = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pypkgpack = 'pypkgpack.bundle:CLI'
