[tool.poetry]
name = "pypkgpack"
version = "0.4.0"
description = "Bundling your Python project into a single Python file."
authors = ["thautwarm <twshere@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
ast-compat = "^0.11.1"
wisepy2 = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pypkgpack = 'pypkgpack.bundle:CLI'
